@@ -1,5 +1,6 @@
 2013-04-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
+	* liststore.py, view.py: Added support for feeds unification.
 	* tumblr/entry.py: Added support for notification of Tumblr.
 
 2013-04-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
